@@ -48,6 +48,7 @@
 	  kahua-spvr-concurrency
 	  kahua-httpd-concurrency
 	  kahua-keyserv-concurrency
+	  kahua-session-domain
           kahua-config-file
 
 	  ;; Utilities
@@ -148,6 +149,8 @@
    (httpd-concurrency :init-keyword :httpd-concurrency :init-value 10)
 
    (keyserv-concurrency :init-keyword :keyserv-concurrency :init-value 10)
+
+   (session-domain :init-keyword :session-domain :init-value :site)
 
    ;; internal
    (user-mode :init-value #f)
@@ -276,6 +279,7 @@
 	      spvr-concurrency
 	      httpd-concurrency
 	      keyserv-concurrency
+	      session-domain
 	      config-file)
 
 ;; Utilities
